<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_Background"
    tools:context=".fragments.registration.ProgrammerRegistrationFragment">

    <EditText
        android:id="@+id/etCompanyLanguage"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_shape_white"
        android:ems="10"
        android:fontFamily="@font/monda"
        android:inputType="textPersonName"
        android:text="@string/registration_screen_startup_company_language_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCompanyZipCode"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyLanguage" />

    <TextView
        android:id="@+id/tvCompanyLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/registration_screen_startup_company_language"
        android:textColor="@color/Primary_Green"
        app:layout_constraintStart_toEndOf="@+id/etCompanyZipCode"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyWebsite" />

    <EditText
        android:id="@+id/etCompanyZipCode"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_shape_white"
        android:ems="10"
        android:fontFamily="@font/monda"
        android:inputType="textPersonName"
        android:text="@string/registration_screen_startup_company_zipcode_hint"
        app:layout_constraintEnd_toStartOf="@+id/etCompanyLanguage"
        app:layout_constraintStart_toStartOf="@+id/tvCompanyWebsite"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyZipCode" />

    <TextView
        android:id="@+id/tvCompanyZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/registration_screen_startup_company_zipcode"
        android:textColor="@color/Primary_Green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyWebsite" />

    <EditText
        android:id="@+id/etCompanyWebsite"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_shape_white"
        android:ems="10"
        android:fontFamily="@font/monda"
        android:inputType="textPersonName"
        android:text="@string/registration_screen_startup_company_website_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvCompanyWebsite"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyWebsite" />

    <TextView
        android:id="@+id/tvCompanyWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/registration_screen_startup_company_website"
        android:textColor="@color/Primary_Green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyEmail" />

    <EditText
        android:id="@+id/etCompanyEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_shape_white"
        android:ems="10"
        android:fontFamily="@font/monda"
        android:inputType="textPersonName"
        android:text="@string/registration_screen_startup_company_recruiter_email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvCompanyEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyEmail" />

    <TextView
        android:id="@+id/tvCompanyEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/registration_screen_startup_company_recruiter_email"
        android:textColor="@color/Primary_Green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCompanyName" />

    <TextView
        android:id="@+id/tvCompanyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/monda_bold"
        android:text="@string/registration_screen_startup_company_name"
        android:textColor="@color/Primary_Green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCompanyName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_shape_white"
        android:ems="10"
        android:fontFamily="@font/monda"
        android:inputType="textPersonName"
        android:text="@string/registration_screen_startup_company_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvCompanyName"
        app:layout_constraintTop_toBottomOf="@+id/tvCompanyName" />

</androidx.constraintlayout.widget.ConstraintLayout>