<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary_Background">

    <ImageView
        android:id="@+id/vectorBackground"
        android:layout_width="920dp"
        android:layout_height="579dp"
        android:contentDescription="VectorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/half_moon" />

    <TextView
        android:id="@+id/text1textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="149dp"
        android:fontFamily="@font/monda"
        android:text="@string/selection_screen_Text_1"
        android:textColor="@color/Primary_White"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vectorBackground" />

    <TextView
        android:id="@+id/text2textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="128dp"
        android:fontFamily="@font/monda"
        android:text="@string/selection_screen_Text_2"
        android:textColor="@color/Primary_White"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vectorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startupButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:background="@drawable/rounded_button_black"
        android:fontFamily="@font/monda_bold"
        android:text="@string/selection_screen_Button_Startup"
        android:textAlignment="center"
        android:textColor="@color/Primary_White"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/programmerButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_button_black"
        android:fontFamily="@font/monda_bold"
        android:text="@string/selection_screen_Button_Programmer"
        android:textAlignment="center"
        android:textColor="@color/Primary_White"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/text2textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/programmerCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/programmerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1textView"
        app:srcCompat="@drawable/circle_white" />

    <ImageView
        android:id="@+id/startupCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@+id/startupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2textView"
        app:srcCompat="@drawable/circle_white" />

    <ImageView
        android:id="@+id/IconProgrammer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/programmerCircle"
        app:layout_constraintEnd_toEndOf="@+id/programmerCircle"
        app:layout_constraintStart_toStartOf="@+id/programmerCircle"
        app:layout_constraintTop_toTopOf="@+id/programmerCircle"
        app:srcCompat="@drawable/programmer_icon" />

    <ImageView
        android:id="@+id/IconStartup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/startupCircle"
        app:layout_constraintEnd_toEndOf="@+id/startupCircle"
        app:layout_constraintStart_toStartOf="@+id/startupCircle"
        app:layout_constraintTop_toTopOf="@+id/startupCircle"
        app:srcCompat="@drawable/startup_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>